--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,11 @@
 # main links links
 main:
-  - title: "Research"
-    url: /publications/
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "About"
+    url: /about/   
+
+  - title: "Research"
+    url: /publications/ 
      
   - title: "CV"
     url: /cv/
