--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,9 @@ main:
 
   - title: "Research"
     url: /research/ 
-  
+   
+   - title: "test"
+    url: /test/  
     
   - title: "CV"
     url: /cv/
