--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,8 +7,8 @@ main:
   - title: "Research"
     url: /research/ 
    
-   - title: "test"
-    url: /test/  
+   - title: "research2"
+    url: /research2/  
     
   - title: "CV"
     url: /cv/
