--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,11 @@ main:
   - title: "Main"
     url: /about/   
    
-   - title: "research2"
-    url: /research22/  
+   - title: "Research"
+    url: /research/
+    
+    - title: "Test"
+    url: /test/
     
   - title: "CV"
     url: /cv/
