--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,11 +4,8 @@ main:
   - title: "Main"
     url: /about/   
    
-   - title: "Research"
+   - title: "Publications"
     url: /research/
-    
-    - title: "Test"
-    url: /test/
     
   - title: "CV"
     url: /cv/
