--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,10 @@
 # main links links
 main:
-
   - title: "Main"
     url: /about/   
    
    - title: "Publications"
-    url: /research/
+    url: /publications/
     
   - title: "CV"
     url: /cv/
