--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,22 @@
 # main links links
 main:
-  - title: "Main"
-    url: /about/   
-   
-   - title: "Publications"
+  - title: "Publications"
     url: /publications/
+
+  - title: "Talks"
+    url: /talks/    
+
+  - title: "Teaching"
+    url: /teaching/    
+    
+  - title: "Portfolio"
+    url: /portfolio/
+        
+  - title: "Blog Posts"
+    url: /year-archive/
     
   - title: "CV"
     url: /cv/
     
-    
+  - title: "Guide"
+    url: /markdown/
