--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,11 @@
 main:
   - title: "Main"
     url: /about/
-    
+
+  - title: "Research"
+    url: /research/
+
   - title: "CV"
     url: /cv/
 
-  - title: "Research2"
-    url: /research2/
 
