--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Anna Hasselqvist"
-  avatar           : "IMG-20220212-WA0073.jpeg"
+  avatar           : "Screenshot_20221103-230527_Gallery"
   bio              : "Doctoral candidate at the ifo Insitute, University of Munich"
   location         : "Munich, Germany"
   employer         :
