--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Anna Hasselqvist"
 title_separator          : "-"
 name                     : &name "Anna Hasselqvist"
 description              : &description "personal description"
-url                      : https://hasselqvist.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://annahasselqvist.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "hasselqvist/hasselqvist.github.io"
+repository               : "hasselqvist/annahasselqvist.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -101,7 +101,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         :
+  linkedin         : "Anna Hasselqvist"
   orcid            : 
   pinterest        :
   soundcloud       :
