--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Anna Hasselqvist"
-  avatar           : "Screenshot_20221103-230527_Gallery.jpg"
+  avatar           : "IFO_MUC_AB_093_cut.jpg"
   bio              : "Doctoral candidate at the ifo Insitute, University of Munich"
   location         : "Munich, Germany"
   employer         :
