--- a/_config.yml
+++ b/_config.yml
@@ -80,11 +80,12 @@ analytics:
 
 # Site Author
 author:
+  photo            : "© ifo Institut | Enno Kapitza"
   name             : "Anna Hasselqvist"
   avatar           : "IFO_MUC_AB_093_cut.jpg"
   bio              : "Doctoral candidate at the ifo Insitute, University of Munich"
   location         : "Munich, Germany"
-  employer         :
+  employer         : 
   googlescholar    : 
   email            : "hasselqvist@ifo.de"
   researchgate     : 
