--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,8 @@ author:
   lastfm           :
   linkedin         : "Anna Hasselqvist"
   orcid            : 
-  pinterest        :
+  pinterest        : 
+  pinterest        : "photo © ifo Institut | Enno Kapitza"
   soundcloud       :
   stackoverflow    : 
   steam            :
@@ -114,7 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-  bio              : "photo © ifo Institut | Enno Kapitza"
+
 
 
 # Reading Files
