--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   linkedin         : "Anna Hasselqvist"
   orcid            : 
   pinterest        : 
-  pinterest        : "photo © ifo Institut | Enno Kapitza"
+  pinterest        : 
   soundcloud       :
   stackoverflow    : 
   steam            :
