--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Anna Hasselqvist"
   avatar           : "IFO_MUC_AB_093_cut.jpg"
-  bio              : "Doctoral candidate at the ifo Insitute, University of Munich"
+  bio              : "Doctoral candidate at the ifo Insitute, University of Munich <br> photo credits © ifo Institut | Enno Kapitza"
   location         : "Munich, Germany"
   employer         : 
   googlescholar    : 
@@ -101,7 +101,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "Anna Hasselqvist"
+  linkedin         : "https://www.linkedin.com/in/anna-hasselqvist-40888016b/"
   orcid            : 
   pinterest        : 
   pinterest        : 
