--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "www.linkedin.com/in/anna-hasselqvist-phd"
+  linkedin         : "anna-hasselqvist-phd"
   orcid            : 
   pinterest        : 
   pinterest        : 
