--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Anna Hasselqvist"
-  avatar           : "IFO_MUC_AB_093_cut.jpg"
+  avatar           : "IFO_MUC_AB_093_cut_3.jpg"
   bio              : "Doctoral candidate at the ifo Insitute, University of Munich <br> <br> photo credits <br> © ifo Institut | Enno Kapitza"
   location         : "Munich, Germany"
   employer         : 
