--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Anna Hasselqvist"
   avatar           : "IFO_MUC_AB_093_cut_2.jpg"
-  bio              : "Doctoral candidate at the ifo Insitute, University of Munich <br> <br> photo credits <br> © ifo Institut | Enno Kapitza"
+  bio              : "photo credits <br> © ifo Institut | Enno Kapitza"
   location         : "Munich, Germany"
   employer         : 
   googlescholar    : 
