--- a/_config.yml
+++ b/_config.yml
@@ -86,9 +86,9 @@ author:
   location         : "Munich, Germany"
   employer         : 
   googlescholar    : 
-  email            : "hasselqvist@ifo.de"
+  email            : "ahasselqvist@diw.de"
   researchgate     : 
-  uri              : "https://www.ifo.de/en/hasselqvist-a"
+  uri              : "https://www.diw.de/sixcms/detail.php?id=diw_01.c.972401.en"
   bitbucket        :
   codepen          :
   dribbble         :
